--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-brunch": "~2.0.0",
     "elm-brunch": "^0.7.0",
     "javascript-brunch": "~2.0.0",
-    "uglify-js-brunch": "~2.0.1"
+    "uglify-js-brunch": "~2.0.1",
+    "elm": "^0.18.0"
   }
 }
